Places: Refactor Location API, Dialog and Input #465 #5080 #5082
